crates/uitest/fixtures/ty/def/trait_impl_kind_mismatch.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: crates/uitest/fixtures/ty/trait_impl_kind_mismatch.fe
---
error[6-0002]: given trait argument kind mismatch
   ┌─ trait_impl_kind_mismatch.fe:10:14
   │
10 │ impl Foo for i32 {}
   │              ^^^ expected `(* -> *)` kind, but `i32` has `*` kind

error[6-0002]: given trait argument kind mismatch
   ┌─ trait_impl_kind_mismatch.fe:12:14
   │
12 │ impl Foo for S<i32> {}
   │              ^^^^^^ expected `(* -> *)` kind, but `S<i32>` has `*` kind


